SG-2003-07-31-0: Bugfix:    global load value not working as load_threshold

                 Changed:   sge_schedd, qstat, qmon, qhost
                 Issue:     589
                 Review:    AH

SG-2003-07-29-0: Bugfix     - Corrected the order of pending jobs in case of
                            functional tickets.
                            - added error handling to lGetRef
                            - Implemented a new algorithm the fticket calculation.
                              Depending on the ratio of fcategories and jobs, it
                              can be a lot faster than the previous allgorithm
                            - added a "\n" to a qmaster error message
                Issue:     585
                Review:    AH, EB
                Changed:   sge_schedd, qmaster 

JG-2003-07-22-0: Bugfix     "*_RESERVED_USAGE gives wrong values for PE jobs" 
                            was fixed for 5.3p4, but the value for vmem in case 
                            of loosely integrated parallel jobs with the pe 
                            parameter job_is_first_task = FALSE still was 
                            incorrect.
                 Issue:     580
                 Review:    EB
                 Changed:   sge_execd

MD-2003-07-21-0: Bugfix	    fixed datatype IA64 Port

SG-2003-07-17-1: Bugfix     fixed the build (removed printf statements)

SG-2003-07-17-0: optim.     - Optimized function ticket computation. Decreased
                            the amount of cull accesses when the pending jobs
                            are set active and inactive for calculation its
                            tickets.
                            - Fixed a bug (which I added with the last optimization)
                              for calculating the ftickets for running jobs.
                 Review:    AH
                 Changed:   sge_schedd

BD-2003-07-16-0: Bugfix:    Change FreeBSD arch strings from freebsd-* to