@@ -1,3 +1,8 @@
+AH-2003-08-01-0: Enhancem.  Added integration package for tight integration
+                            with Sun HPC ClusterTools 5
+                            Enhanced distinst to install tight integration
+                 Review:    AA
+
 SG-2003-07-31-0: Bugfix:    global load value not working as load_threshold
 
                  Changed:   sge_schedd, qstat, qmon, qhost
